52: fix bug with nextjs import pdf_viewer.css not correctly

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -9,6 +9,7 @@
 @import "./prism.css";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "@pdfslick/react/dist/pdf_viewer.css";
 
 @layer components {
   #__next {
