feat: update tailwindcss@4.0.6 in `apps/solidweb`

--- a/apps/solidweb/src/index.css
+++ b/apps/solidweb/src/index.css
@@ -1,3 +1,51 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@plugin '@kobalte/tailwindcss';
+
+@source './**/*.{js,ts,jsx,tsx,css,md,mdx,html,json,scss}';
+
+@custom-variant dark (&:is(.dark *));
+
+@theme {
+  --animate-content-show: contentShow 100ms ease-out;
+  --animate-content-hide: contentHide 75ms ease-in forwards;
+
+  @keyframes contentShow {
+    0% {
+      opacity: 0;
+      transform: scale(0.95);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+  @keyframes contentHide {
+    0% {
+      opacity: 1;
+      transform: scale(1);
+    }
+    100% {
+      opacity: 0;
+      transform: scale(0.95);
+    }
+  }
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
