Update comment boxes in the sidebar
Match comment in the sidebar UI to the one from Figma
Add "spoilers" for long comments (hide part of the content)
Action buttons appear upon clicking
Fix bug where floating comments were hidden behind sidebar

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -120,7 +120,7 @@
   }
 
   .comment-content {
-    @apply w-60 text-black text-base font-light font-['Inter'] mb-4 ml-1;
+    @apply w-full text-black text-base font-light font-['Inter'] mb-4 ml-1;
   }
 
   .comment-footer {
