Store filled in user name in the browser
Persistently store user name in the browser
Reduce gap between Avatar and User name

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -95,6 +95,10 @@
     @apply flex items-center gap-3;
   }
 
+  .comment-author-sidebar {
+    @apply gap-1;
+  }
+
   .comment-author-avatar {
     @apply w-10 h-10 rounded-full;
   }
