Introduce comment threading
Add reply functionality to comments
Display threaded comments in the same comment box, sorted by date
Fix most bugs that arose from it
Fix UI  for it

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -120,7 +120,7 @@
   }
 
   .comment-divider {
-    @apply w-71 h-0 border-t border-slate-300 mb-3;
+    @apply w-full h-0 border-t border-slate-300 mb-3;
   }
 
   .comment-content {
